# Event-Contract-Player

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  patch_tests.py  pyproject.toml  summarize.py  test_proxy.py  vps_verify_results.json  vps_verify_tokyo.json
config/: project_constants.yaml
discord_bot/: bot.py
docs/: ARCHITECTURE.md  DECISIONS.md  DICISIONS.md  MODEL_ITERATIONS.md  PM_MODEL_ITERATIONS.md  PROGRESS.md  ROADMAP.md  architecture_patch.md  polymarket-migration-plan.md  polymarket-patch.md
models/: .gitignore  README.md
reports/: backtest_xgboost_v1_10m_20260214_022124.json  backtest_xgboost_v2_10m_20260215_123612.json  backtest_xgboost_v2_10m_20260215_123627.json  backtest_xgboost_v2_10m_20260215_123630.json  backtest_xgboost_v2_10m_20260215_123632.json  backtest_xgboost_v2_1440m_20260215_123802.json  backtest_xgboost_v2_30m_20260215_123602.json  backtest_xgboost_v2_30m_20260215_123606.json  backtest_xgboost_v2_60m_20260215_123657.json  features_top_lgbm_10m.txt  features_top_lgbm_30m.txt  final_backtest_xgboost_v1_30m.json  final_backtest_xgboost_v2_10m.json  final_backtest_xgboost_v2_30m.json  final_backtest_xgboost_v2_60m.json  gate1_robustness_analysis.txt  parallel_backtest_review.txt
scripts/: analyze_calibration.py  analyze_features.py  analyze_gate1_candidate.py  analyze_importance.py  backtest.py  extract_scoreboard_stats.py  fetch_history.py  generate_scoreboard.py  merge_backtests.py  run_live.py  start_pm_live.sh  train_model.py  train_xgboost_model.py
tests/: test_backtest_engine.py  test_backtest_flat.py  test_features.py  (+16 more)
(+223 files in other folders)
