[project]
name = "btc-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.6.4",
    "lightgbm>=4.6.0",
    "pandas>=3.0.0",
    "python-binance>=1.0.34",
    "python-dotenv>=1.2.1",
    "shap>=0.49.1",
    "ta-lib>=0.6.8",
    "torch>=2.10.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
